# arbiter

./: .env.example  .gitignore  PRODUCTION_READINESS.md  README.md  SUBMISSION.md  package.json
agent/: README.md  index.mjs  proof-trail.latest.json
contracts/: Cargo.toml  Odra.toml  build.rs
contracts/resources/casper_contract_schemas/: arbiter_settlement_schema.json
contracts/resources/legacy/: arbiter_settlement_schema.json
contracts/src/: arbiter_settlement.rs  lib.rs
contracts/wasm/: ArbiterSettlement.wasm
docs/: DEMO_SCRIPT.md  EVIDENCE.md  JUDGE_PACKET.md
docs/screenshots/: agent-dry-run.html  agent-dry-run.txt  cspr-deploy.html
scripts/: check.mjs
truth-endpoint/: README.md  server.mjs
web/: index.html  server.mjs
