[package]
edition = "2021"
name = "arbiter_contracts"
version = "0.1.0"

[dependencies]
odra = "2.8.1"

[dev-dependencies]
odra-test = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"

[[bin]]
name = "arbiter_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "arbiter_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
